--- a/block_stats/block_stats.ipynb
+++ b/block_stats/block_stats.ipynb
@@ -994,12 +994,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "blockchain.to_csv(\"blockchain\")"
+    "blockchain.to_csv(\"clean_block_data.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
