add sat/vbyte to mempool data

--- a/mempool/mempool_note.ipynb
+++ b/mempool/mempool_note.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -75,18 +75,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "df['fees'] = df['fees'].astype('float')\n",
     "df['fees'] = df['fees'].apply(lambda x: x * 100000000)\n",
-    "df['fees'] = df['fees'].astype('int')"
+    "df['fees'] = df['fees'].astype('int')\n",
+    "df['vsize'] = df['vsize'].astype('int')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"sats/vbyte\"] = df[\"fees\"]/df[\"vsize\"]\n",
+    "df['sats/vbyte'] = df['sats/vbyte'].astype('int')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -112,6 +123,7 @@
        "      <th></th>\n",
        "      <th>fees</th>\n",
        "      <th>vsize</th>\n",
+       "      <th>sats/vbyte</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -119,29 +131,35 @@
        "      <th>0</th>\n",
        "      <td>3372</td>\n",
        "      <td>252</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>3953</td>\n",
        "      <td>1658</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>5641</td>\n",
        "      <td>405</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>219</td>\n",
        "      <td>145</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1720</td>\n",
        "      <td>346</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
@@ -149,50 +167,55 @@
        "      <th>907</th>\n",
        "      <td>8040</td>\n",
        "      <td>665</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>908</th>\n",
        "      <td>1305</td>\n",
        "      <td>142</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>909</th>\n",
        "      <td>1699</td>\n",
        "      <td>141</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>910</th>\n",
        "      <td>860</td>\n",
        "      <td>372</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>911</th>\n",
        "      <td>531</td>\n",
        "      <td>208</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>912 rows × 2 columns</p>\n",
+       "<p>912 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     fees vsize\n",
-       "0    3372   252\n",
-       "1    3953  1658\n",
-       "2    5641   405\n",
-       "3     219   145\n",
-       "4    1720   346\n",
-       "..    ...   ...\n",
-       "907  8040   665\n",
-       "908  1305   142\n",
-       "909  1699   141\n",
-       "910   860   372\n",
-       "911   531   208\n",
+       "     fees  vsize  sats/vbyte\n",
+       "0    3372    252          13\n",
+       "1    3953   1658           2\n",
+       "2    5641    405          13\n",
+       "3     219    145           1\n",
+       "4    1720    346           4\n",
+       "..    ...    ...         ...\n",
+       "907  8040    665          12\n",
+       "908  1305    142           9\n",
+       "909  1699    141          12\n",
+       "910   860    372           2\n",
+       "911   531    208           2\n",
        "\n",
-       "[912 rows x 2 columns]"
+       "[912 rows x 3 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,12 +227,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv(\"memdata_clean.csv\",index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fees</th>\n",
+       "      <th>vsize</th>\n",
+       "      <th>sats/vbyte</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3372</td>\n",
+       "      <td>252</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3953</td>\n",
+       "      <td>1658</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5641</td>\n",
+       "      <td>405</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>219</td>\n",
+       "      <td>145</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1720</td>\n",
+       "      <td>346</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>907</th>\n",
+       "      <td>8040</td>\n",
+       "      <td>665</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>908</th>\n",
+       "      <td>1305</td>\n",
+       "      <td>142</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>909</th>\n",
+       "      <td>1699</td>\n",
+       "      <td>141</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>910</th>\n",
+       "      <td>860</td>\n",
+       "      <td>372</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>911</th>\n",
+       "      <td>531</td>\n",
+       "      <td>208</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>912 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     fees  vsize  sats/vbyte\n",
+       "0    3372    252          13\n",
+       "1    3953   1658           2\n",
+       "2    5641    405          13\n",
+       "3     219    145           1\n",
+       "4    1720    346           4\n",
+       "..    ...    ...         ...\n",
+       "907  8040    665          12\n",
+       "908  1305    142           9\n",
+       "909  1699    141          12\n",
+       "910   860    372           2\n",
+       "911   531    208           2\n",
+       "\n",
+       "[912 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
